# drv8873

./: Cargo.toml
.cargo/: config.toml
examples/: embassy_shared_bus.rs  stm32g0.rs
src/: config.rs  inputs.rs  lib.rs  registers.rs  tests.rs
