[workspace]
[package]
name = "drv8873"
version = "0.1.0"
edition = "2021"

[[example]]
name = "embassy_shared_bus"
test = false
bench = false


[dependencies]
bitfield = "0.18.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
num_enum = { version = "0.7.3", default-features = false }

[target.'cfg(unix)'.dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
async-std = { version = "1.13.0", features = ["attributes"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
[target.'cfg(target_arch="arm")'.dev-dependencies]
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal/", version = "0.3.0" }
embassy-sync = { path = "../embassy/embassy-sync", version = "0.6.2" }
embassy-stm32 = { path = "../embassy/embassy-stm32", features = [
  "exti",
  "defmt",
  "memory-x",
  "stm32g030k6",
  "time",
  "time-driver-any",
] }
embassy-time = { path = "../embassy/embassy-time/", features = [
  "tick-hz-1_000_000",
] }


cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = [
  "critical-section",
], default-features = false }

[features]
async = []
defmt-03 = []
