[package]
name = "drv8873"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[example]]
name = "embassy_shared_bus"
test = false
bench = false


[features]
default = []
sleep = []
async = []
defmt-03 = []

[dependencies]
bitfield = "0.19.4"
defmt = "1.0.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
num_enum = { version = "0.7.3", default-features = false }

[target.'cfg(unix)'.dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
async-std = { version = "1.13.0", features = ["attributes"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-embedded-hal = { version = "0.3.0" }
embassy-sync = { version = "0.6.2" }
embassy-stm32 = { version = "0.4", features = [
  "exti",
  "defmt",
  "memory-x",
  "stm32g030k6",
  "time",
  "time-driver-any",
] }
embassy-time = { version = "0.5", features = ["tick-hz-1_000_000"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = [
  "critical-section",
], default-features = false }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3           # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3           # <-
overflow-checks = false # <-
